<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/relative_1"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:background="#5A2E71"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_all_inclusive"
            app:tint="@color/white" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_emoji_emotions"
            app:tint="#F220123A" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_brightness_high"
            app:tint="#F220123A" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_1"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp">

        <TextView
            android:id="@+id/text_hello_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/hello_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_hello_name"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="240dp"
            android:text="@string/message"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="8dp"
            android:layout_below="@+id/text_message"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="32dp"
            android:background="#5A2E71" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#5A2E71"
            android:text="@string/nova_frase"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>